# ocaml-books

./: .gitignore  BUGS  README.rst  bookweald.opam  dune-project
docs/: FictionBook2.1.xsd  author-aliases.rst  blacklisting.rst  configuration.rst  etl.rst  extract_cmd.rst  fb2_parse.rst  group.rst  group_cmd.rst  illegal-files.rst  index.rst  index_cmd.rst  init_cmd.rst  organize.rst  quickstart.rst  reference.rst  schema_init_cmd.rst  tool.rst  unzip.rst  validate_cmd.rst  validation.rst  xmlencoding.rst
lib/: alias.ml  blacklist.ml  book.ml  config.ml  db.ml  db.mli  dune  fb2_parse.ml  fb2_parse.mli  fs.ml  fs.mli  input_channel.ml  logging.ml  normalize.ml  organize.ml  recoding_channel.ml  recoding_channel.mli  unzip.ml  unzip.mli  utils.ml  xml_declaration.ml  xml_declaration.mli
test/: dune  run_tests.ml  test_input_channel.ml  test_normalize.ml  test_recoding_channel.ml  test_xml_declaration.ml
test/fixtures/: cp1251_cp1251.txt  cp1251_simple.txt  cp1251_utf8.txt  utf8_simple.fb2
