(library
 (name bookweald)
 (public_name bookweald)
 (synopsis "Manage FB2 archive")
 (libraries
   zipc
   xmlm
   yojson ppx_deriving_yojson.runtime

   uucp
   uutf
   postgresql
   logs fmt logs.fmt
 )

 ;(modules_without_implementation db)
 (preprocess
  (pps ppx_deriving_yojson
 ))
 (flags :standard -g)
)
